fix: fix button layout on smaller devices

--- a/public/style.css
+++ b/public/style.css
@@ -706,7 +706,7 @@ footer {
   }
 
   .toolbox button {
-    max-width: 30%;
+    max-width: 40%;
 padding: 5px;
   margin: 1rem auto;
   font-family: "Space Grotesk", sans-serif;
